Fix line breaks in level block of overview

--- a/app/views/stylesheets/default.css
+++ b/app/views/stylesheets/default.css
@@ -73,7 +73,7 @@ form .error {color: red; padding: 3px 0px;}
   #co_points a {font-weight: bold;color:red;}
   #co .timer {color: #b0b0b0; float:right; padding-right: 10px;}
   #co .basic_money {width: 160px;}
-  #co .level {width: 70px;}
+  #co .level {width: 80px;}
   #co .experience {width: 150px;}
     #co_experience_bar {border: 1px solid #d0d0d0; margin: -4px 10px -2px 0;}
       #co_experience_percentage {height: 4px; background-image: url(asset:progress);font-size: 0px;}
